# agent-tutor

./: .dockerignore  .dockerignore.mutmut  .env.example  .gitignore  .golangci.yml  .pre-commit-config.yaml  AGENTS.md  CLA.md  Caddyfile  Dockerfile.mutmut  GENERATION.md  MONITORING.md  Makefile  README.md  README_RU.md  biome.json  conftest.py  docker-compose.yml  go.work  go.work.sum  pyproject.toml  pyrightconfig.json  server.py
.github/workflows/: ci.yml
.pi/: APPEND_SYSTEM.md
.pi/skills/browser-e2e-test/: SKILL.md
admin-dashboard/: Dockerfile  README.md  go.mod  go.sum
admin-dashboard/cmd/server/: main.go
admin-dashboard/internal/server/: abuse.go  abuse_test.go  client.go  server.go  server_test.go
admin-dashboard/src/: types.ts
admin-dashboard/tests/: api.test.js  contract.test.js  types.test.ts
admin-dashboard/tests/contracts/: admin-endpoints.json  api-endpoints.json  rag-endpoints.json
agent-db/: README.md  pyproject.toml
agent-db/agent_db/: cli.py
agent-db/agent_db/core/: __init__.py
agent-db/agent_db/seedgen/: __init__.py  apply.py  ddl.py  materialize.py  models.py
agent-tutor-go/: go.mod  go.sum
agent-tutor-go/config/: loader_test.go  mcp_loader_test.go  types.go
agent-tutor-go/pkg/metrics/: metrics.go
agent-tutor-sdk/: pyproject.toml
agent-tutor-sdk/src/agent_tutor_sdk/: __init__.py  seed_models.py
agent-tutor-sdk/tests/unit/: test_contracts_drift.py  test_database.py  test_seedgen_validation.py
api-service/: Dockerfile  README.md  pyproject.toml
api-service/embed/: README.md  build.sh  embed.css  embed.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
api-service/embed/css/: animations.css  form.css  header.css  index.css  messages.css  panel.css  responsive.css  root.css  tools.css  trigger.css  variables.css
api-service/embed/src/: config.ts  dom.ts  env.d.ts  icons.ts  index.ts  sse.ts  (+8 more)
data-service/: .gitignore  Dockerfile  README.md  go.mod  go.sum
db/: __init__.py  connection.py  connector.py  database.py  fixtures.py  models.py  schema.py
demo/: settings.py
demo/api/: Dockerfile  README.md  __init__.py  agent.py  backlog.py  data.py  http_models.py  pyproject.toml  server.py  sessions.py
demo/web/: Dockerfile  README.md  __init__.py  pyproject.toml  server.py
doc/: FINAL_TASK.md  NEW_ROADMAP.md  PENTEST-CHEK.md  ROADMAP.md  RUNBOOK.md  api-flow.md  monitoring.md
doc/agents/: anti-abuse.md  config-migration.md  http-clients.md  mcp-session-lifecycle.md  search-strategies.md  testing-guide.md  tool-call-safety-layers.md  web-service.md
docker/grafana/: MONITORING.md
docker/loki/: config.yaml
docker/otel-collector/: config.yaml
docker/prometheus/: prometheus.yml
docker/promtail/: config.yaml
docker/tempo/: config.yaml
fixtures/: agent_generate.py  catalog.py  document_generator.py  generate.py  ingest.py
helperium-go/: go.mod  go.sum
helperium-go/config/: errors.go  filter_validation_test.go  loader.go  loader_test.go  mcp_loader_test.go  migration.go  migration_test.go  types.go  validate.go
helperium-sdk/: pyproject.toml
helperium-sdk/src/helperium_sdk/: data_client.py  settings.py  tracing.py
helperium-sdk/src/helperium_sdk/rag/: client.py
helperium-sdk/tests/unit/: test_data_client.py
mcp-gateway/: Dockerfile  README.md  go.mod  go.sum
mcp-gateway/cmd/: main.go  main_test.go  playground.html  proxy.go
mcp_server/: Dockerfile  pyproject.toml  server.py
mcp_server/mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
mcp_server/tools/: disciplines.py  grades.py  rag.py  student.py  teacher.py
rag/: Dockerfile  README.md  __init__.py  _types.py  admin_http_models.py  chunker.py  client.py  config.py  db.py  embeddings.py  http_models.py  interfaces.py  models.py  parser.py  pipeline.py  prometheus_metrics.py  pyproject.toml  repository.py  reranker.py  service.py  utils.py  vector_store.py
rag/cache/: __init__.py  local.py  protocol.py  redis.py
rag/chunker/: __init__.py  base.py  recursive.py  semantic.py  sentence.py
rag/embedding/: __init__.py  litellm_provider.py  local.py  protocol.py
rag/fixtures/: __init__.py  cli_docgen.py  document_generator.py  seedgen.py
rag/parser/: __init__.py  parser.py
rag/pipeline/: __init__.py  pipeline.py  repository.py
rag/reranker/: __init__.py  bm25.py
rag/tests/: conftest.py
rag/vector_store/: __init__.py  chroma.py  protocol.py
scripts/: backup.py  backup.sh  bench_mcp_gateway.py  build_mutmut_docker.sh  check-admin-contract.sh  check_stack.sh  dev.sh  extract-frontend-endpoints.js  init-db.sql  integration-multi-tenancy.sh  run_mutmut.sh  run_mutmut_docker.sh  setup_tenants.py  stack.sh  stress_mcp_gateway.py  test-dynamic-tools.sh  test-multi-tenancy.sh  test-strict-multi-tenancy.sh
specs/: README.md  api.openapi.json  api.openapi.yaml  config.example.json  config.postgres.json  config.schema.json  config.schema.md  rag.openapi.json  rag.openapi.yaml
specs/schemas/: grade.schema.json  group.schema.json  schedule-entry.schema.json
tests/: README.md  conftest.py
tests/e2e/: conftest.py  helpers.py  test_admin_lifecycle.py  test_agents.py  test_config_persistence.py  test_data_isolation.py  test_mcp_dynamic.py  test_mcp_validation.py  test_search_strategies.py  test_sse_session.py
tools/: Dockerfile  pyproject.toml  rag.py
(+294 files in other folders)
