[project]
name = "agent-tutor"
version = "0.0.1"
readme = "README.md"
description = "University MCP server"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
    "faker>=20.0.0",
]

[project.scripts]
agent-tutor = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
