[project]
name = "agent-tutor"
version = "0.1.0"
readme = "README.md"
description = "An AI assistant for the university help site"
requires-python = ">=3.12, <3.14" # tokie (dependencies for chonkie) needs Python 3.12+ and <3.14 (stable)
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.28.0",
    "starlette>=0.50.0",
    "uvicorn[standard]>=0.38.0",
    "faker>=20.0.0",
    "docling>=2.0.0",
    "chonkie[semantic]>=1.0.0",
    "chromadb>=1.5.9",
    "sentence-transformers>=5.5.1",
    "python-docx>=1.2.0",
    "litellm>=1.86.2",
    "fastapi>=0.137.2",
    "psycopg2-binary>=2.9.0",
]

[project.scripts]
agent-tutor = "mcp_server.server:main"
agent-ingest = "fixtures.ingest:main" # Ingest documents into the local RAG index
agent-generate = "fixtures.agent_generate:main" # Generate educational materials
agent-chat-api = "demo.api:main"
agent-demo-web = "demo.web:main"
agent-rag = "rag.service:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "respx>=0.21.0",
    "freezegun>=1.5.0",
    "ruff>=0.7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.wheel.force-include]
"fixtures.json" = "fixtures.json"
