[project]
name = "agent-tutor"
version = "0.1.0"
readme = "README.md"
description = "An AI assistant for the university help site"
requires-python = ">=3.12, <3.14"

# ── Core dependencies (installed in every image) ──────────────────────
dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.28.0",
    "fastapi>=0.137.2",
    "uvicorn[standard]>=0.38.0",
    "starlette>=0.50.0",
    "mcp[cli]>=1.0.0",       # mcp server + api mcp client
    "psycopg2-binary>=2.9.0",
]

# ── Per-service extras (only added with --extra) ──────────────────────
[project.optional-dependencies]
rag = [
    "sentence-transformers>=5.5.1",   # → torch (heavy!) — rag only
    "chromadb>=1.5.9",
    "docling>=2.0.0",
    "chonkie[semantic]>=1.0.0",
]
api = [
    "litellm>=1.86.2",
]
tools = [
    "faker>=20.0.0",
    "python-docx>=1.2.0",
]

# ── Entry points ──────────────────────────────────────────────────────
[project.scripts]
agent-tutor = "mcp_server.server:main"
agent-ingest = "fixtures.ingest:main"
agent-generate = "fixtures.agent_generate:main"
agent-chat-api = "demo.api:main"
agent-demo-web = "demo.web:main"
agent-rag = "rag.service:main"

# ── Dev dependencies (not installed in production images) ─────────────
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "respx>=0.21.0",
    "freezegun>=1.5.0",
    "ruff>=0.7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

# ── PyTorch CPU-only index (avoids pulling CUDA libs on Linux) ───────
# Used only inside the rag Dockerfile where torch is needed.
# On Mac, uv falls back to PyPI (Mac torch is CPU-only by default).
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[tool.uv]
index-strategy = "unsafe-first-match"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.wheel.force-include]
"fixtures.json" = "fixtures.json"
